hphp/test/slow/readonly/locals.php.expectf
Fatal error: This expression is readonly, its members cannot be modified %s on line 12
